<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/possible_time"
        android:textSize="18dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_sun"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/shape_rectangle_dark_violet_line_30"
            android:text="@string/sun"
            android:textSize="18dp"
            android:textColor="@color/dark_violet"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>

        <Button
            android:id="@+id/btn_mon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/shape_rectangle_dark_violet_line_30"
            android:text="@string/mon"
            android:textSize="18dp"
            android:textColor="@color/dark_violet"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>

        <Button
            android:id="@+id/btn_tue"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/shape_rectangle_dark_violet_line_30"
            android:text="@string/tue"
            android:textSize="18dp"
            android:textColor="@color/dark_violet"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>

        <Button
            android:id="@+id/btn_wed"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/shape_rectangle_dark_violet_line_30"
            android:text="@string/wed"
            android:textSize="18dp"
            android:textColor="@color/dark_violet"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>

        <Button
            android:id="@+id/btn_thu"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/shape_rectangle_dark_violet_line_30"
            android:text="@string/thu"
            android:textSize="18dp"
            android:textColor="@color/dark_violet"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>

        <Button
            android:id="@+id/btn_fri"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/shape_rectangle_dark_violet_line_30"
            android:text="@string/fri"
            android:textSize="18dp"
            android:textColor="@color/dark_violet"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>

        <Button
            android:id="@+id/btn_sat"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/shape_rectangle_dark_violet_line_30"
            android:text="@string/sat"
            android:textSize="18dp"
            android:textColor="@color/dark_violet"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_type"
            android:textSize="18dp"/>

        <Spinner
            android:id="@+id/sp_payment_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_type"
            android:textSize="18dp"/>

        <Spinner
            android:id="@+id/sp_guide_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"/>
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="20dp">-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/nationality"-->
            <!--android:textSize="18dp"/>-->

        <!--<Spinner-->
            <!--android:id="@+id/sp_nationality"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="40dp"/>-->
    <!--</LinearLayout>-->

    <Button
        android:id="@+id/btn_guide_search"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_dark_violet_full_30"
        android:text="@string/search"
        android:textColor="@color/cf_white"
        android:textSize="17dp"
        android:textStyle="bold"/>
</LinearLayout>