<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TravelerEditProfileActivity"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/iv_gender"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_user_female"/>

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:text="traveler"
                android:textSize="23dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/current_pw"
            android:textSize="17dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_current_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/tv_current_pw_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/pw_check"
                android:textColor="@color/yellow"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/tv_current_pw_wrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrong_pw"
                android:textColor="@color/yellow"
                android:visibility="invisible"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/new_pw"
            android:textSize="17dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_new_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/tv_new_pw_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/pw_check"
            android:textColor="@color/yellow"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/confirm_new_pw"
            android:textSize="17dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_confirm_new_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/tv_confirm_new_pw_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pw2_check"
                android:textColor="@color/yellow"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/tv_new_pw_check_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pw2_check_match"
                android:textColor="@color/yellow"
                android:visibility="invisible"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/selector_dark_violet_full_20"
            android:text="@string/edit_profile"
            android:textColor="@color/cf_white"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>